# DB

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.adoc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.adoc  README.rst  README.txt  requirements.txt  setup.sh
docs/source/: api_reference.rst  conf.py  developing.rst  index.rst  use_cases.rst
pytests/: conftest.py  test_braid_db.py  test_sql_models.py
scripts/: configure_funcx_endpoint.sh
src/: .flake8  braid-db.sql  braid_db.py  client.py  db_func.py  db_tools.py  db_tools_mpi.py  server.py
src/braid_db/: __init__.py  braid-db.sql  braid_db.py  client.py  db_func.py  db_tools.py  db_tools_mpi.py  gen_tools.py  log_tools.py  server.py
src/braid_db/funcx/: __init__.py  endpoint_config.py  funcx_main.py
src/braid_db/globus_compute/: __init__.py  entry_points.py
src/braid_db/models/: __init__.py  braid_models.py
src/braid_db/models/api/: __init__.py  api_models.py
src/braid_db/service/viz/: mermaid_graphing.py  template.html
src/braid_db/tools/: .flake8  db_create.py  db_print.py  record_invalidate.py
src/tools/: db-create.py  db-print.py
test/: Notes.txt  README.adoc  test-0.py  test-1.py  test-all.sh  test-core.sh  test-funcx-1.py  test-mpi-01.sh  test-mpi-all.sh  test-mpi.sh  test-workflows.sh  test.sh  test_mpi_01.py  test_mpi_02.py  test_mpi_check.py
workflows/BraggNN/: workflow.py  workflow.sh
workflows/CTSegNet/: .flake8  workflow.py  workflow.sh
workflows/SLAC/: workflow.py  workflow.sh
workflows/SSX/: workflow.py  workflow.sh
workflows/mascot/: .flake8  .gitignore  avg-rates.awk  avg-times.awk  battery.zsh  clean.sh  inserts.cfg  mk-inserts.zsh  mk-scaling.zsh  scaling.zsh  workflow.py  workflow.sh
