[tool.poetry]
name = "braid-db"
version = "0.1.0"
description = "The Braid Project Provenance DB"
authors = ["Justin Wozniak <woz@anl.gov>",
          "Jim Pruyne <pruyne@uchicago.edu>"]

packages = [
         {include = "braid_db", from="src"},
         {include = "workflows"}
]

[tool.poetry.scripts]
db-create = "braid_db.tools.db_create:main"
db-print = "braid_db.tools.db_print:main"
workflow-SLAC = "workflows.SLAC.workflow:main"
workflow-BraggNN = "workflows.BraggNN.workflow:main"
workflow-CTSegNet = "workflows.CTSegNet.workflow:main"
workflow-SSX = "workflows.SSX.workflow:main"
register-funcx = "braid_db.funcx.funcx_main:register_functions"
funcx-add-record = "braid_db.funcx.funcx_main:funcx_add_record"
db-to-mermaid = "braid_db.service.viz.mermaid_graphing:main"
db-to-dot = "braid_db.service.viz.dot_graphing:main"
invalidate-record = "braid_db.tools.record_invalidate:main"


[tool.poetry.dependencies]
python = "^3.9"
# mpi4py = "^3.1.3"
sqlmodel = "^0"
simpleeval = "^0.9"
SQLAlchemy = "1.4.35"
funcx = "^1"
funcx-endpoint = "^1"

[tool.poetry.dev-dependencies]
pytest = "^6"
pre-commit = "^2"
isort = "^5.10.1"
importmagic = "^0.1.7"
epc = "^0.0.5"
python-lsp-server = "^1"
pyls-flake8 = "^0"
pylsp-mypy = "^0"
pyls-isort = "^0"
python-lsp-black = "^1"
pylsp-rope = "^0"
fastapi = "^0.78.0"

[tool.poetry.group.dev.dependencies]
furo = "^2022.9.29"
sphinx-copybutton = "^0.5.1"

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["src"]

[tool.mypy]
python_version = 3.9
platform = "linux"
ignore_missing_imports = true

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
